Fixed whatgpt3 section margin on mobile device

--- a/gpt3-website/src/App.css
+++ b/gpt3-website/src/App.css
@@ -64,6 +64,12 @@ a {
   margin: 4rem 6rem;
 }
 
+@media screen and (max-width: 490px) {
+  .section__margin {
+    margin: 4rem 1rem;
+  }
+}
+
 .scale-up-center {
   -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
     both;
